--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <ul id="secondul"> 
                 <li> <a href="mailto:Maxwellken360@gmail.com">E-mail</a> </li>
                 <li> <a href="https://www.instagram.com/maxwell_recovery360/?fs=e&s=cl">Instagram</a> </li>
-                <li> Text us | (218) 460-1470</li>
+                <li> Text us | +1 (347) 735-8895 </li>
                 <li> <a href="#">LinkedIn</a> </li>    
             </ul>
             
